Latest page menu/scrollbar fix

--- a/themes/stmichaels/css/latestpage.css
+++ b/themes/stmichaels/css/latestpage.css
@@ -1,19 +1,18 @@
 #rightContent{
 	position: absolute;
 	top: 100px;
-	right: 70px;
+	right: 130px;
 	z-index: 100; 
 }
 
 #rightContent ul {
-	direction: rtl; 
-	padding-right: 40px; }
+	direction: rtl; }
 #rightContent ul li {
 	text-align: right;}
 
 #rightContent img {
 	float: right;
-	margin-right: 20px;  }
+	margin-right: -20px;  }
 
 #leftContent {
 	width: 740px;
